# ESP-Sensory

./: .gitignore  .gitmodules  README.md
.github/workflows/: CI.yml  ci.yml
components/bsp/: CMakeLists.txt
components/bsp/include/: bsp_board.h  bsp_led.h
components/esp-sr/: .gitignore  Kconfig.projbuild  component.mk  libversion
components/esp-sr/model/: movemodel.py
components/esp-sr/src/: mn_process_commands.c
components/esp_bridge/: CMakeLists.txt  Kconfig.bridge
components/esp_bridge/include/: esp_bridge_task.h
components/esp_bridge/private/: io.h
components/esp_bridge/src/: esp_bridge_task.c  jtag.c  serial.c
components/i2c_devices/: CMakeLists.txt
components/i2c_devices/io_expander/: tca9554.c  tca9554.h
components/i2c_devices/touch_panel/: gt1151.c  gt911.c
components/i2c_devices/touch_panel/include/: gt911.h
components/iot_button/: CMakeLists.txt
components/lvgl/: CMakeLists.txt
components/lvgl/include/: lv_demo_conf.h
components/lvgl/lv_demos/: lv_demo.h
components/lvgl/lv_port/: lv_port.c
components/lvgl/lvgl/: CMakeLists.txt
examples/bridge/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3
examples/bridge/main/: CMakeLists.txt  (+4 more)
examples/bridge/tasks/esp_bridge/: CMakeLists.txt
examples/bridge/tasks/esp_bridge/include/: esp_bridge_port.h
examples/bridge/tasks/esp_bridge/src/: esp_bridge_port.c  jtag.c
examples/touch/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3
examples/touch/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c
examples/touch/main/app/: app_wifi.c  app_wifi.h
examples/touch/main/gui/: lv_example_admin.c  lv_example_clockScreen.c  lv_example_fingerTouch.h  lv_example_func.c  lv_example_func.h  lv_example_image.h  lv_example_show_public.c  lv_example_test.c  lv_example_top_menu.c  lv_func_layer.c  lv_func_layer.h
examples/touch/main/gui/font/: font_KaiTi22.c  font_KaiTi24.c  font_KaiTi36.c  font_KaiTi40.c
examples/touch/main/gui/image/: liftOff_small.c  press_small.c
(+28 files in other folders)
